Finalize left-sidebar and .project - Fix spacing between icons and texts - Resize container column - Add ellipsis rules to card in case of overflow - Fix margin for card child elements

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h3,
 h4,
 h5,
 div {
-  color: #e0e0e0;;
+  color: #e0e0e0;
 }
 
 button,
@@ -38,7 +38,7 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 2fr 2fr 2fr 1fr;
+  grid-template-columns: 1fr 2fr 1fr 1fr 1fr;
   grid-template-rows: auto 1fr;
   height: 100%;
 }
@@ -64,26 +64,27 @@ body {
 }
 
 .logo {
-  max-width: 2rem;
+  width: clamp(0.5rem, 2rem, 4rem);
   filter: invert(72%);
 }
+
 .logodiv {
   grid-row: 1/2;
-  display: flex;
-  gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(43px, 0.1fr));
+  row-gap: 2rem;
 }
 
 .ls-top {
   display: grid;
   grid-row: 2/3;
-  grid-template-columns: repeat(2, minmax(30px, 0.1fr));
+  grid-template-columns: repeat(2, minmax(43px, 0.1fr));
   row-gap: 1rem;
 }
 
-
 .ls-bottom {
   display: grid;
-  grid-template-columns: repeat(2, minmax(30px, 0.1fr));
+  grid-template-columns: repeat(2, minmax(43px, 0.1fr));
   row-gap: 1rem;
 }
 
@@ -91,7 +92,6 @@ body {
   font-size: clamp(15px, 70%, 3rem);
   font-weight: 900;
   color: #e0e0e0;
-
 }
 
 .project {
@@ -106,7 +106,7 @@ body {
 
 .card-holder {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(3, minmax(200px, 0.3fr));
   gap: 15px;
 }
 
@@ -115,6 +115,10 @@ body {
   background-color: #1e1e1e;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
   border-left: 2px solid #fb8c00;
+  display: -webkit-box;              
+  -webkit-line-clamp: 3;             
+  -webkit-box-orient: vertical;      
+  overflow: hidden;                  
 }
 
 .project-title {
@@ -124,7 +128,7 @@ body {
 }
 
 .project-text {
-  font-size: clamp(10px, 70%, 2rem);
+  font-size: clamp(8px, 0.6rem, 2rem);
   color: #a0a0a0;
   padding: 0.7rem;
 }
@@ -134,7 +138,7 @@ body {
   display: flex;
   justify-content: flex-end;
   gap: 10px;
-  margin: 10px;
+  margin: 2rem 1rem;
 }
 
 .icon {
